# code-llava-eval

./: .gitignore  README.md  pyproject.toml
data/: grammar_book.tex  grammar_book.txt  grammar_book_for_claude_long.txt  grammar_book_for_claude_medium.txt  grammar_book_segmented.json  grammar_book_segmented.txt
general/: __init__.py  generation_test.py  processor_v2.py  step1.py  step1_raw_text.py
ruler_minimal/: README.md  dummy_embedding.npy  eval_with_memory.py  minimal_evaluate.py  prepare_dataset.py  serve_qwen3_eval.py
utils/: __init__.py
utils/inference/: __init__.py  convert_deepspeed_to_hf.sh  convert_fsdp_to_hf.sh  convert_safetensors_to_hf.sh  download_ckpt.sh  inference.py  run_inference.sh  test_data.json
utils/model/: __init__.py  code_chunker.py  code_llava_model.py  modeling_qwen3.py  modular_qwen3.py  packed_attention.py  processor.py
