[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.4",
    "torch>=2.9.0",
    "openai>=1.55.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.31.0",
    "tqdm>=4.66.0",
    "pyyaml>=6.0.0",
    "pandas>=2.2.0",
    "nltk>=3.9.0",
    "wonderwords>=2.2.0",
    "scipy>=1.11.0",
    "tenacity>=9.0.0",
    "requests>=2.32.0",
    "sshtunnel-requests>=0.1.3",
    "transformers>=4.45.0",
    "html2text>=2020.1.16",
    "beautifulsoup4>=4.12.0",
    "peft>=0.17.1",
]
